--- a/kibana/Dockerfile
+++ b/kibana/Dockerfile
@@ -1,7 +1,8 @@
 FROM local/elkbase:v01
 MAINTAINER Diabol.se
-ADD kibana.tar.gz /opt/
 RUN set -ex \
+		&& curl -L -o /opt/kibana.tar.gz https://download.elastic.co/kibana/kibana/kibana-4.6.1-linux-x86_64.tar.gz
+		&& tar -xzf /opt/kibana.tar.gz -C /opt
         && yum update -y \
         && groupadd kibana \
         && useradd -g kibana kibana \
