--- a/logstash/Dockerfile
+++ b/logstash/Dockerfile
@@ -1,8 +1,8 @@
-FROM local/elkbase:v01
+FROM centos:7
 MAINTAINER Diabol.se
 RUN set -ex \
-		&& curl -L -o /opt/logstash.tar.gz https://download.elastic.co/logstash/logstash/logstash-all-plugins-2.4.0.tar.gz
-		&& tar -xzf /opt/logstash.tar.gz -C /opt
+	&& curl -L -o /opt/logstash.tar.gz https://download.elastic.co/logstash/logstash/logstash-all-plugins-2.4.0.tar.gz \
+	&& tar -xzf /opt/logstash.tar.gz -C /opt \
         && yum update -y \
         && groupadd logstash \
         && useradd -g logstash logstash \
