--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     logstash:
         image: diabol/logstash
         volumes:
-            - ./logstash/config/demo.conf:/opt/logstash/config/demo.conf
+            - ./logstash/config/:/opt/logstash/config/
             - ./logstash/demologs:/tmp/demologs
         command: [/opt/logstash/bin/logstash,-f,/opt/logstash/config/demo.conf]
         depends_on:
